Inprogress updating view Interaction by clicking button Xem tương tác on Customer Care List.

--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -309,7 +309,7 @@
 	<th:block th:include="fragments/frg_ModalConfirmation"></th:block>
 	
 	<script type="text/javascript" th:src="@{/resources/js/interaction/interaction.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/js/interaction/interaction-save.js}"></script>
+	<!-- <script type="text/javascript" th:src="@{/resources/js/interaction/interaction-save.js}"></script> -->
 
 	<!-- PHẦN CHỈNH SỬA KHI HỆ THỐNG ASSETS TRÊN INTERNET BỊ LỖI -->
 	<!-- FILE JS BỔ SUNG -->
