--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
@@ -270,7 +270,7 @@
 																		liên hệ chính</th>
 																	<th data-field="email" class="th5">Email</th>
 																	<th data-field="phone" class="th6">Số điện thoại</th>
-																	<th data-field="phone" class="th7">Sinh nhật</th>
+																	<th data-field="phone" class="th7">Sinh nhật/Ngày thành lập CTY</th>
 																	<th data-field="address" class="th8">Địa chỉ khách
 																		hàng</th>
 																	<th data-field="profession" class="th9">Ngành nghề</th>
@@ -299,7 +299,7 @@
 																	<td th:text="${customer.email != null ? customer.email : ''}"></td>
 																	<td th:text="${customer.phone != null ? customer.phone : ''}"></td>
 																	
-																	<td>Sinh nhật</td>
+																	<td th:text="${customer.birthday != null ? customer.birthday : ''}"></td>
 																	
 																	<td th:text="${customer.address != null ? customer.address : ''}"></td>
 																	<td th:text="${customer.profession != null ? customer.profession.name : ''}"></td>
