View and update interaction on Customer Care Table completely.

--- a/web/src/main/webapp/WEB-INF/templates/intro.html
+++ b/web/src/main/webapp/WEB-INF/templates/intro.html
@@ -148,12 +148,12 @@
 <th:block th:include="fragments/common_javascript"></th:block>
 
 <script th:inline="javascript" src="/library/webjars/datatables/1.10.25/js/jquery.dataTables.min.js"></script>
-<script th:inline="javascript" src="/library/webjars/datatables.net/buttons/1.7.1/js/dataTables.buttons.min.js"></script>
-<script th:inline="javascript" src="/library/webjars/datatables.net/js/libs/jszip/3.1.3/jszip.min.js"></script>
-<script th:inline="javascript" src="/library/webjars/datatables.net/js/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-<script th:inline="javascript" src="/library/webjars/datatables.net/js/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-<script th:inline="javascript" src="/library/webjars/datatables.net/buttons/1.7.1/js/buttons.html5.min.js"></script>
-<script th:inline="javascript" src="/library/webjars/datatables.net/buttons/1.7.1/js/buttons.print.min.js"></script>
+<!-- <script th:inline="javascript" src="/library/webjars/datatables.net/buttons/1.7.1/js/dataTables.buttons.min.js"></script> -->
+<!-- <script th:inline="javascript" src="/library/webjars/datatables.net/js/libs/jszip/3.1.3/jszip.min.js"></script> -->
+<!-- <script th:inline="javascript" src="/library/webjars/datatables.net/js/libs/pdfmake/0.1.53/pdfmake.min.js"></script> -->
+<!-- <script th:inline="javascript" src="/library/webjars/datatables.net/js/libs/pdfmake/0.1.53/vfs_fonts.js"></script> -->
+<!-- <script th:inline="javascript" src="/library/webjars/datatables.net/buttons/1.7.1/js/buttons.html5.min.js"></script> -->
+<!-- <script th:inline="javascript" src="/library/webjars/datatables.net/buttons/1.7.1/js/buttons.print.min.js"></script> -->
 
 <!-- <script type="text/javascript" th:src="@{/resources/js/chat/datatable.js}" ></script> -->
 <script src="resources/js/task/BackToTop.js"></script>
