Inprogress updating reminder for potential  customers

--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_datatable.html
@@ -4,7 +4,7 @@
 	var dataSetCustomerCare = /*[[${dataSetCustomerCare}]]*/'[]'; // Thymeleaf sẽ thay thế ${dataSet} bằng dữ liệu thực tế
 </script>
  -->
-<table id="tblDatatableCustomerCare" class="table table-striped table-bordered file-export">
+<table id="tblDatatableCustomerCare" style="width: 100%" class="table table-striped table-bordered file-export">
 	<!-- Truyền dataSet vào JavaScript -->
 	<thead>
 		<tr>
