--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_EditCustomerAddress.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_EditCustomerAddress.html
@@ -58,7 +58,8 @@
                                 <input type="text" id="vn-country" value="Vietnam" readonly>
                             </div>
                         </div>
-
+                        <input type="hidden" id="longitude" />
+                        <input type="hidden" id="latitude" />
                         <button type="submit" id="submit" class="submit-btn">Submit Address</button>
                     </form>
                 </div>
