Fix bugs releted to adress + CRUD customer successfully. And test chat assistant completely.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/buttonGroupFunction.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/buttonGroupFunction.html
@@ -163,8 +163,8 @@
 // 					const mainStatusSelect = document.getElementById('mainStatus');
 // 					const subStatusSelect = document.getElementById('subStatus');
 					
-					document.getElementById('mainStatus').value = data.customer.mainStatus || '';
-					document.getElementById('subStatus').value = data.customer.subStatus || '';
+					document.getElementById('mainStatus').value = data.customer.mainStatus.id || '';
+					document.getElementById('subStatus').value = data.customer.subStatus.id || '';
 
 					// Lặp qua các option và chọn giá trị phù hợp
 // 					for (let option of mainStatusSelect.options) {
