--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenuGuest.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenuGuest.html
@@ -12,20 +12,20 @@
 			    </a>
 			</li> -->
 			 <li class="dropdown nav-item active" data-menu="dropdown">
-                <a class="dropdown-toggle nav-link" th:href="@{/}"><i class="icon-home"></i><span data-i18n="nav.dash.main">Home</span></a>
+                <a class="dropdown-toggle nav-link" th:href="@{/}"><i class="icon-home"></i><span data-i18n="nav.dash.main">TRANG CHỦ</span></a>
             </li>
             <li class="dropdown nav-item active" data-menu="dropdown">
-                <a class="dropdown-toggle nav-link" th:href="@{/ecosystem}"><i class="icon-globe"></i><span data-i18n="nav.dash.main">Ecosystem</span></a>
+                <a class="dropdown-toggle nav-link" th:href="@{/ecosystem}"><i class="icon-globe"></i><span data-i18n="nav.dash.main">HỆ SINH THÁI</span></a>
             </li>
             <li class="dropdown nav-item" data-menu="dropdown">
-                <a class="dropdown-toggle nav-link" th:href="@{/contact}"><i class="icon-envelope"></i><span data-i18n="nav.dash.main">Contact</span></a>
+                <a class="dropdown-toggle nav-link" th:href="@{/contact}"><i class="icon-envelope"></i><span data-i18n="nav.dash.main">LIÊN HỆ</span></a>
             </li>
             <li class="dropdown nav-item" data-menu="dropdown">
-                <a class="dropdown-toggle nav-link" th:href="@{/feature-introduction}"><i class="icon-settings"></i><span data-i18n="nav.dash.main">Features</span></a>
+                <a class="dropdown-toggle nav-link" th:href="@{/feature-introduction}"><i class="icon-settings"></i><span data-i18n="nav.dash.main">TÍNH NĂNG</span></a>
             </li>
-            <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" th:href="@{/feedback}"><i class="icon-note"></i><span data-i18n="nav.templates.main">Feedback</span></a>
+            <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" th:href="@{/feedback}"><i class="icon-note"></i><span data-i18n="nav.templates.main">PHẢN HỒI</span></a>
              </li>
-             <li class="dropdown nav-item"><a class="dropdown-toggle nav-link" href="#"><i class="icon-notebook"></i><span data-i18n="nav.templates.main">About</span></a>
+             <li class="dropdown nav-item"><a class="dropdown-toggle nav-link" href="#"><i class="icon-notebook"></i><span data-i18n="nav.templates.main">VỀ CHÚNG TÔI</span></a>
         </ul>
     </div>
 </div>        
