Update source code (phase 1)

--- a/web/src/main/webapp/WEB-INF/templates/fragments/interaction/frg_interaction.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/interaction/frg_interaction.html
@@ -4,6 +4,7 @@
 		<th:block th:include="fragments/interaction/frg_searchInteraction.html"></th:block>		
 		<div class="container">
 			<h4 class="title order-title justify-content-center">Danh Sách Tương Tác</h4>
+			<p style="font-style: italic; color: gray;">Thông tin về "Ngày tạo" sẽ được tạo tự động sau khi nhấn Save và lưu thành công!</p>
 			<div id="success-alert" class="alert alert-success" style="display: none"></div>
 			<div id="warning-alert" class="alert alert-warning" style="display: none"></div>
 		</div>
