--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -94,320 +94,8 @@
 								<div class="table-responsive" style = "width: 100%">
 									<th:block th:include="fragments/chat/frg_datatable"></th:block>
 								</div>
-<!-- 									<table class="table-striped table-bordered dataex-key-scrolling dataex-res-modal"> -->
-<!-- 										<thead> -->
-<!-- 											<tr> -->
-<!-- 												<th>Hành động</th> -->
-<!-- 												<th>Tên công ty</th> -->
-<!-- 												<th>Người liên hệ</th> -->
-<!-- 												<th>Trạng thái chính</th> -->
-<!-- 												<th>Chi tiết tương tác</th> -->
-<!-- 												<th>Độ ưu tiên</th> -->
-<!-- 												<th>Tình trạng chăm sóc</th> -->
-<!-- 												<th>Thực hiện chăm sóc</th> -->
-<!-- 												<th>Ngày nhắc nhở</th> -->
-<!-- 											</tr> -->
-<!-- 										</thead> -->
-<!-- 											<tbody id="customerTableBody"> -->
-												
-<!-- 											</tbody> -->
-<!-- 										<tbody> -->
-<!-- 											<tr> -->
-<!-- 												<td> -->
-<!-- 													<button class="btn btn-update">Cập nhật</button> -->
-<!--     												<button class="btn btn-hide">Tạm ẩn</button> -->
-<!-- 												</td> -->
-<!-- 												<td class="company-name" style="cursor: pointer;">Công ty TNHH ABC</td> -->
-<!-- 												<td>Trần Anh Tuấn</td> -->
-<!-- 												<td style="color: #FF6961; font-weight: 600">Mới</td> -->
-<!-- 												<td style="cursor: pointer;"> -->
-<!-- 													<button>Xem tương tác</button> -->
-<!-- 												</td> -->
-<!-- 												<td> -->
-<!-- 												    <div class="radio-badge-group"> -->
-<!-- 												        <input type="radio" id="option1" name="importance-row1" value="1"> -->
-<!-- 												        <label for="option1-row1" class="badge badge-default">1. Rất quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option2" name="importance-row1" value="2"> -->
-<!-- 												        <label for="option2-row1" class="badge badge-default">2. Quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option3" name="importance-row1" value="3"> -->
-<!-- 												        <label for="option3-row1" class="badge badge-default">3. Bình thường</label> -->
-<!-- 												    </div> -->
-<!-- 												</td> -->
-<!-- 												<td class="width-350"> -->
-<!-- 				                                    <div class="alert alert-success" role="alert"> -->
-<!-- 				                                        <strong>Đã chăm sóc!</strong> -->
-<!-- 				                                    </div> -->
-<!-- 				                                </td> -->
-<!-- 												<td> -->
-<!-- 													<button class="care-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Chăm sóc</span> -->
-<!-- 													</button> -->
-	
-<!-- 													<button class="meet-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Hẹn gặp mặt</span> -->
-<!-- 													</button> -->
-<!-- 												</td> -->
-<!-- 												<td style="vertical-align: middle;">20/09/2024</td> -->
-<!-- 											</tr> -->
-											
-<!-- 											<tr> -->
-<!-- 												<td> -->
-<!-- 													<button class="btn btn-update">Cập nhật</button> -->
-<!--     												<button class="btn btn-hide">Tạm ẩn</button> -->
-<!-- 												</td> -->
-<!-- 											    <td class="company-name" style="cursor: pointer;">Công ty TNHH Thương Mại Đại Phát</td> -->
-<!-- 											    <td>Nguyễn Văn Nam</td> -->
-<!-- 											    <td style="color: #FF6961; font-weight: 600">Mới</td> -->
-<!-- 												<td style="cursor: pointer;"> -->
-<!-- 													<button>Xem tương tác</button> -->
-<!-- 												</td> -->
-<!-- 												<td> -->
-<!-- 												    <div class="radio-badge-group"> -->
-<!-- 												        <input type="radio" id="option1" name="importance-row2" value="1"> -->
-<!-- 												        <label for="option1-row2" class="badge badge-default">1. Rất quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option2" name="importance-row2" value="2"> -->
-<!-- 												        <label for="option2-row2" class="badge badge-default">2. Quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option3" name="importance-row2" value="3"> -->
-<!-- 												        <label for="option3-row2" class="badge badge-default">3. Bình thường</label> -->
-<!-- 												    </div> -->
-<!-- 												</td> -->
-<!-- 											    <td class="width-350"> -->
-<!-- 				                                    <div class="alert alert-primary" role="alert"> -->
-<!-- 				                                        <strong>Chưa chăm sóc</strong> -->
-<!-- 				                                    </div> -->
-<!-- 				                                </td> -->
-<!-- 											    <td> -->
-<!-- 													<button class="care-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Chăm sóc</span> -->
-<!-- 													</button> -->
-	
-<!-- 													<button class="meet-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Hẹn gặp mặt</span> -->
-<!-- 													</button> -->
-<!-- 												</td> -->
-<!-- 												<td style="vertical-align: middle;">20/09/2024</td> -->
-<!-- 											</tr> -->
-											
-<!-- 											<tr> -->
-<!-- 												<td> -->
-<!-- 													<button class="btn btn-update">Cập nhật</button> -->
-<!--     												<button class="btn btn-hide">Tạm ẩn</button> -->
-<!-- 												</td> -->
-<!-- 											    <td class="company-name" style="cursor: pointer;">Cửa hàng Thời Trang Lụa Việt</td> -->
-<!-- 											    <td>Trần Thị Lan</td> -->
-<!-- 											    <td style="color: #FF6961; font-weight: 600">Mới</td> -->
-<!-- 											    <td style="cursor: pointer;"> -->
-<!-- 													<button>Xem tương tác</button> -->
-<!-- 												</td> -->
-<!-- 											    <td> -->
-<!-- 											    	<div class="radio-badge-group"> -->
-<!-- 												        <input type="radio" id="option1" name="importance-row3" value="1"> -->
-<!-- 												        <label for="option1-row3" class="badge badge-default">1. Rất quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option2" name="importance-row3" value="2"> -->
-<!-- 												        <label for="option2-row3" class="badge badge-default">2. Quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option3" name="importance-row3" value="3"> -->
-<!-- 												        <label for="option3-row3" class="badge badge-default">3. Bình thường</label> -->
-<!-- 												    </div> -->
-<!-- 											    </td> -->
-<!-- 											    <td class="width-350"> -->
-<!-- 				                                    <div class="alert alert-primary" role="alert"> -->
-<!-- 				                                        <strong>Chưa chăm sóc</strong> -->
-<!-- 				                                    </div> -->
-<!-- 				                                </td> -->
-<!-- 											    <td> -->
-<!-- 													<button class="care-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Chăm sóc</span> -->
-<!-- 													</button> -->
-	
-<!-- 													<button class="meet-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Hẹn gặp mặt</span> -->
-<!-- 													</button> -->
-<!-- 												</td> -->
-<!-- 												<td style="vertical-align: middle;">20/09/2024</td> -->
-<!-- 											</tr> -->
-											
-<!-- 											<tr> -->
-<!-- 												<td> -->
-<!-- 													<button class="btn btn-update">Cập nhật</button> -->
-<!--     												<button class="btn btn-hide">Tạm ẩn</button> -->
-<!-- 												</td> -->
-<!-- 											    <td class="company-name" style="cursor: pointer;">Doanh nghiệp Xuất Khẩu Hải Sản Biển Đông</td> -->
-<!-- 											    <td>Phạm Văn Minh</td> -->
-<!-- 											    <td style="color: #FF6961; font-weight: 600">Mới</td> -->
-<!-- 											    <td style="cursor: pointer;"> -->
-<!-- 													<button>Xem tương tác</button> -->
-<!-- 												</td> -->
-<!-- 											    <td> -->
-<!-- 											    	<div class="radio-badge-group"> -->
-<!-- 												        <input type="radio" id="option1" name="importance-row4" value="1"> -->
-<!-- 												        <label for="option1-row4" class="badge badge-default">1. Rất quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option2" name="importance-row4" value="2"> -->
-<!-- 												        <label for="option2-row4" class="badge badge-default">2. Quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option3" name="importance-row4" value="3"> -->
-<!-- 												        <label for="option3-row4" class="badge badge-default">3. Bình thường</label> -->
-<!-- 												    </div> -->
-<!-- 											    </td> -->
-<!-- 											    <td class="width-350"> -->
-<!-- 				                                    <div class="alert alert-success" role="alert"> -->
-<!-- 				                                        <strong>Đã chăm sóc!</strong> -->
-<!-- 				                                    </div> -->
-<!-- 				                                </td> -->
-<!-- 											   	<td> -->
-<!-- 													<button class="care-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Chăm sóc</span> -->
-<!-- 													</button> -->
-	
-<!-- 													<button class="meet-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Hẹn gặp mặt</span> -->
-<!-- 													</button> -->
-<!-- 												</td> -->
-<!-- 												<td style="vertical-align: middle;">20/09/2024</td> -->
-<!-- 											</tr> -->
-											
-<!-- 											<tr> -->
-<!-- 												<td> -->
-<!-- 													<button class="btn btn-update">Cập nhật</button> -->
-<!--     												<button class="btn btn-hide">Tạm ẩn</button> -->
-<!-- 												</td> -->
-<!-- 											    <td class="company-name" style="cursor: pointer;">Siêu thị Điện Máy Thành Công</td> -->
-<!-- 											    <td>Hoàng Thị Hương</td> -->
-<!-- 											    <td style="color: #FF6961; font-weight: 600">Mới</td> -->
-<!-- 											    <td style="cursor: pointer;"> -->
-<!-- 													<button>Xem tương tác</button> -->
-<!-- 												</td> -->
-<!-- 											    <td> -->
-<!-- 											    	<div class="radio-badge-group"> -->
-<!-- 												        <input type="radio" id="option1" name="importance-row5" value="1"> -->
-<!-- 												        <label for="option1-row5" class="badge badge-default">1. Rất quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option2" name="importance-row5" value="2"> -->
-<!-- 												        <label for="option2-row5" class="badge badge-default">2. Quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option3" name="importance-row5" value="3"> -->
-<!-- 												        <label for="option3-row5" class="badge badge-default">3. Bình thường</label> -->
-<!-- 												    </div> -->
-<!-- 											    </td> -->
-<!-- 											    <td class="width-350"> -->
-<!-- 				                                    <div class="alert alert-primary" role="alert"> -->
-<!-- 				                                        <strong>Chưa chăm sóc</strong> -->
-<!-- 				                                    </div> -->
-<!-- 				                                </td> -->
-<!-- 											    <td> -->
-<!-- 													<button class="care-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Chăm sóc</span> -->
-<!-- 													</button> -->
-	
-<!-- 													<button class="meet-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Hẹn gặp mặt</span> -->
-<!-- 													</button> -->
-<!-- 												</td> -->
-<!-- 												<td style="vertical-align: middle;">20/09/2024</td> -->
-<!-- 											</tr> -->
-											
-<!-- 											<tr> -->
-<!-- 												<td> -->
-<!-- 													<button class="btn btn-update">Cập nhật</button> -->
-<!--     												<button class="btn btn-hide">Tạm ẩn</button> -->
-<!-- 												</td> -->
-<!-- 											    <td class="company-name" style="cursor: pointer;">Nhà sách Tri Thức Việt</td> -->
-<!-- 											    <td>Nguyễn Hải Đăng</td> -->
-<!-- 											    <td style="color: #FF6961; font-weight: 600">Mới</td> -->
-<!-- 											    <td style="cursor: pointer;"> -->
-<!-- 													<button>Xem tương tác</button> -->
-<!-- 												</td> -->
-<!-- 											    <td> -->
-<!-- 											    	<div class="radio-badge-group"> -->
-<!-- 												        <input type="radio" id="option1" name="importance-row6" value="1"> -->
-<!-- 												        <label for="option1-row6" class="badge badge-default">1. Rất quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option2" name="importance-row6" value="2"> -->
-<!-- 												        <label for="option2-row6" class="badge badge-default">2. Quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option3" name="importance-row6" value="3"> -->
-<!-- 												        <label for="option3-row6" class="badge badge-default">3. Bình thường</label> -->
-<!-- 												    </div> -->
-<!-- 											    </td> -->
-<!-- 											    <td class="width-350"> -->
-<!-- 				                                    <div class="alert alert-success" role="alert"> -->
-<!-- 				                                        <strong>Đã chăm sóc!</strong> -->
-<!-- 				                                    </div> -->
-<!-- 				                                </td> -->
-<!-- 											    <td> -->
-<!-- 													<button class="care-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Chăm sóc</span> -->
-<!-- 													</button> -->
-	
-<!-- 													<button class="meet-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Hẹn gặp mặt</span> -->
-<!-- 													</button> -->
-<!-- 												</td> -->
-<!-- 												<td style="vertical-align: middle;">20/09/2024</td> -->
-<!-- 											</tr> -->
-											
-<!-- 											<tr> -->
-<!-- 												<td> -->
-<!-- 													<button class="btn btn-update">Cập nhật</button> -->
-<!--     												<button class="btn btn-hide">Tạm ẩn</button> -->
-<!-- 												</td> -->
-<!-- 											    <td class="company-name" style="cursor: pointer;">Công ty Cổ Phần Công Nghệ Mặt Trời</td> -->
-<!-- 											    <td>Trần Quốc Bảo</td> -->
-<!-- 											    <td style="color: #FF6961; font-weight: 600">Mới</td>	 -->
-<!-- 											    <td style="cursor: pointer;"> -->
-<!-- 													<button>Xem tương tác</button> -->
-<!-- 												</td> -->
-<!-- 											    <td> -->
-<!-- 											    	<div class="radio-badge-group"> -->
-<!-- 												        <input type="radio" id="option1" name="importance-row7" value="1"> -->
-<!-- 												        <label for="option1-row7" class="badge badge-default">1. Rất quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option2" name="importance-row7" value="2"> -->
-<!-- 												        <label for="option2-row7" class="badge badge-default">2. Quan trọng</label> -->
-												
-<!-- 												        <input type="radio" id="option3" name="importance-row7" value="3"> -->
-<!-- 												        <label for="option3-row7" class="badge badge-default">3. Bình thường</label> -->
-<!-- 												    </div> -->
-<!-- 											    </td> -->
-<!-- 											    <td class="width-350"> -->
-<!-- 				                                    <div class="alert alert-primary" role="alert"> -->
-<!-- 				                                        <strong>Chưa chăm sóc</strong> -->
-<!-- 				                                    </div> -->
-<!-- 				                                </td> -->
-<!-- 											    <td> -->
-<!-- 													<button class="care-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Chăm sóc</span> -->
-<!-- 													</button> -->
-	
-<!-- 													<button class="meet-button"> -->
-<!-- 													    <span class="icon"></span> -->
-<!-- 													    <span class="text">Hẹn gặp mặt</span> -->
-<!-- 													</button> -->
-<!-- 												</td> -->
-<!-- 												<td style="vertical-align: middle;">20/09/2024</td> -->
-<!-- 											</tr> -->
-<!-- 										</tbody> -->
-<!-- 									</table>	 -->
-							</div>
+								
+s							</div>
 						</div>
 					</div>
 				</div>
