Update source code (phase 3)

--- a/web/src/main/webapp/WEB-INF/templates/fragments/orders/frg_datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/orders/frg_datatable.html
@@ -1,5 +1,6 @@
-Danh sách đơn hàng (Datatable)
 <html xmlns:th="http://www.thymeleaf.org">
+<h4 class="title order-title justify-content-center">Danh Sách Đơn Hàng (Datatable)</h4>
+<p style="font-style: italic; color: gray; margin-left: 30px">Những đơn hàng có mã: D123A54, M123543, G123A54, H123473 là những đơn hàng dùng để hiển thị mẫu và chưa có thông tin trong cơ sở dữ liệu. Vui lòng tạo mới đơn hàng để thực hiện tiếp các chức năng khác.</p>
 
 <script th:inline="javascript">
 	var dataSet = /*[[${dataSet}]]*/'[]'; // Thymeleaf sẽ thay thế ${dataSet} bằng dữ liệu thực tế
