--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
@@ -54,7 +54,8 @@
 		<div class="row">
 			 <div class="col-12">
 			 	<div class="order-screen">
-					<h4 class="title order-title">Danh sách đơn hàng</h4>
+					<h4 class="title order-title justify-content-center">Danh Sách Đơn Hàng (Handsontable)</h4>
+					<p style="font-style: italic; color: gray; margin-left: 30px">Những đơn hàng có mã: D123A54, M123543, là những đơn hàng dùng để hiển thị mẫu và chưa có thông tin trong cơ sở dữ liệu. Vui lòng tạo mới đơn hàng để thực hiện tiếp các chức năng khác.</p>
 					<th:block th:include="fragments/orders/frg_orders.html"></th:block>
 				</div>
 			</div>
