--- a/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
@@ -77,15 +77,15 @@
 								th:text="${customer.contactPerson != null ? customer.contactPerson : ''}"></td>
 							<td>
 								<div class="d-flex justify-content-center">
-									<a th:href="@{/customer/edit(id=${customer.id})}"
+									<a th:href="@{/customer/interact-edit(id=${customer.id})}"
 										class="text-info mr-1 bg-transparent" style="font-size: 20px;">
 										<i class="fas fa-edit w-100"></i>
 									</a>
-									<a th:href="@{/customer/edit(id=${customer.id})}"
+									<a th:href="@{/customer/interact-edit(id=${customer.id})}"
 										class="text-info mr-1 bg-transparent" style="font-size: 20px;">
 										<i class="fas fa-envelope w-100"></i>
 									</a>
-									<a th:href="@{/customer/edit(id=${customer.id})}"
+									<a th:href="@{/customer/interact-edit(id=${customer.id})}"
 										class="text-info mr-1 bg-transparent" style="font-size: 20px;">
 										<i class="fas fa-comment-sms w-100"></i>
 									</a>
